// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaxWidthBox default renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  max-width: 60em;
  margin: 0 auto;
}

<div
    class="c0"
  >
    <h1>
      hello world
    </h1>
  </div>
</DocumentFragment>
`;

exports[`MaxWidthBox styled system renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  padding-top: 4rem;
  padding-bottom: 4rem;
  padding-left: 2rem;
  padding-right: 2rem;
  background-color: white;
  max-width: 80em;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (min-width:46em) {
  .c0 {
    padding-left: 4rem;
    padding-right: 4rem;
  }
}

<div
    class="c0"
  >
    <h1>
      hello world
    </h1>
  </div>
</DocumentFragment>
`;
